fix:karma history overflow issu fixed

--- a/src/modules/Dashboard/modules/Profile/components/KarmaHistory/KarmaHistory.module.css
+++ b/src/modules/Dashboard/modules/Profile/components/KarmaHistory/KarmaHistory.module.css
@@ -17,7 +17,7 @@
     grid-template-columns: repeat(auto-fill, 204px);
     gap: 20px;
     justify-content: space-between;
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
     max-height: 445px;
     scroll-snap-type: y mandatory;
 }
